# EV_Simulation_SW

./: .gitignore  CMakeLists.txt  README.md  init_ev_sim_repo.ps1
.github/workflows/: build-arch-pdf.yml
app/: __init__.py  main.py
app/cli/: CMakeLists.txt  (+2 more)
app/ui_qt/: CMakeLists.txt  __init__.py  main.py  orchestrator_client.py  parameter_bridge.py  pybamm_runner.py
app/ui_qt/include/: OrchestratorClient.hpp
app/ui_qt/qml/: Main.qml  ParamField.qml  ParamForm.qml  Sidebar.qml  Toast.qml
app/ui_qt/src/: OrchestratorClient.cpp  main.cpp
core/: __init__.py
data_io/: __init__.py
docs/: system_software_architecture.md
scripts/: generate_pybamm_schema.py  generate_wltp_class3_dataset.py
src/sim_core/: CMakeLists.txt
src/sim_core/include/evsim/common/: TimeseriesSample.hpp
src/sim_core/include/evsim/core/: Scenario.hpp  SimulationOrchestrator.hpp  c_api.h
src/sim_core/include/evsim/events/: RunEvents.hpp
src/sim_core/include/evsim/io/: DataImporter.hpp  Registry.hpp  WltpCsvLoader.hpp
src/sim_core/include/evsim/models/: BatteryPackModel.hpp  SimulationModel.hpp  SingleCellModels.hpp
src/sim_core/include/evsim/plugins/: Plugin.hpp
src/sim_core/include/evsim/solvers/: EulerSolver.hpp  Solver.hpp
src/sim_core/include/evsim/storage/: ResultStore.hpp
src/sim_core/src/: BatteryPackModel.cpp  EulerSolver.cpp  EventBus.cpp  ImporterRegistry.cpp  InMemoryResultStore.cpp  PluginRegistry.cpp  SimulationOrchestrator.cpp  SingleCellModels.cpp  WltpCsvLoader.cpp  core_c_api.cpp
storage/: __init__.py  result_store.py
tests/: test_orchestrator.py
(+51 files in other folders)
